updates from master

--- a/manpages/csv-nix-tools.7.html
+++ b/manpages/csv-nix-tools.7.html
@@ -68,6 +68,7 @@
 <li><strong><a href="csv-max.1.html">csv-max</a></strong>(1) - take a maximum value of numerical or string column(s)</li>
 <li><strong><a href="csv-merge.1.html">csv-merge</a></strong>(1) - merge multiple CSV streams</li>
 <li><strong><a href="csv-min.1.html">csv-min</a></strong>(1) - take a minimum value of numerical or string column(s)</li>
+<li><strong><a href="csv-peek.1.html">csv-peek</a></strong>(1) - peek at the CSV stream and pass it unmodified</li>
 <li><strong><a href="csv-sort.1.html">csv-sort</a></strong>(1) - sort CSV file by column(s)</li>
 <li><strong><a href="csv-sql.1.html">csv-sql</a></strong>(1) - process CSV input data using simplified SQL syntax</li>
 <li><strong><a href="csv-sqlite.1.html">csv-sqlite</a></strong>(1) - process CSV input data using SQLite</li>
@@ -81,6 +82,7 @@
 <ul>
 <li><strong><a href="csv-exec.1.html">csv-exec</a></strong>(1) - execute an external command for each row</li>
 <li><strong><a href="csv-plot.1.html">csv-plot</a></strong>(1) - generate 2D or 3D graph using gnuplot</li>
+<li><strong><a href="csv-printf.1.html">csv-printf</a></strong>(1) - formats data using <strong><a href="http://www.cplusplus.com/reference/cstdio/printf/">printf</a></strong>(3)</li>
 <li><strong><a href="csv-show.1.html">csv-show</a></strong>(1) - print in human-readable format</li>
 <li><strong><a href="csv-to-html.1.html">csv-to-html</a></strong>(1) - print in HTML format</li>
 <li><strong><a href="csv-to-json.1.html">csv-to-json</a></strong>(1) - print in JSON format</li>
