--- a/manpages/csv-tree.1.html
+++ b/manpages/csv-tree.1.html
@@ -34,6 +34,9 @@
 <dt>-k, --key=<em>NAME</em></dt>
 <dd>use column <em>NAME</em> as a unique key identifying each row
 </dd>
+<dt>-L, --level</dt>
+<dd>add ‘level’ column
+</dd>
 <dt>-p, --parent=<em>NAME</em></dt>
 <dd>use column <em>NAME</em> as a pointer to parent row
 </dd>
