updates from master

--- a/manpages/csv-lstree.1.html
+++ b/manpages/csv-lstree.1.html
@@ -25,6 +25,9 @@
 <h1 id="description">DESCRIPTION</h1>
 <p>Recursively list FILEs (starting from current directory by default).</p>
 <dl>
+<dt>-c <em>NAME1</em>[,<em>NAME2</em>…]</dt>
+<dd>choose the list of columns
+</dd>
 <dt>-f</dt>
 <dd>add parent directory prefix to file names
 </dd>
